# voice-cmd

./: Cargo.toml  LICENSE-MIT  README.md  mise.toml
.github/workflows/: release.yml
crates/core-assets/: Cargo.toml
crates/core-assets/src/: lib.rs
crates/core-config/: Cargo.toml
crates/core-config/src/: lib.rs
crates/core-errors/: Cargo.toml
crates/core-errors/src/: lib.rs
crates/core-ipc/: Cargo.toml
crates/core-ipc/src/: lib.rs
crates/core-logging/: Cargo.toml
crates/core-logging/src/: lib.rs
src/: audio.rs  config.rs  daemon.rs  ipc.rs  main.rs  transcription.rs  vad.rs
