[package]
name = "voice-cmd"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Jcd1230/voice-cmd"

[[bin]]
name = "voice-cmd-overlay"
path = "src/bin/overlay.rs"

[[bin]]
name = "voice-cmd-tts"
path = "src/bin/tts.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
cpal = "0.15"
directories = "5.0"
flate2 = "1.0"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
tar = "0.4"
tempfile = "3.12"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "net", "signal", "sync", "time", "io-util", "fs", "process"] }
toml = "0.8"
transcribe-rs = { version = "0.2", features = ["parakeet"] }
ureq = "2.12"
gtk4 = "0.8"
gtk4-layer-shell = "0.3"
vad-rs = { git = "https://github.com/cjpais/vad-rs", default-features = false }
rubato = "0.16"
rodio = "0.20"
kokoro-tts = { version = "0.3.1", features = ["use-cmudict"] }
hound = "3.5"
